[gd_scene load_steps=6 format=3 uid="uid://7ws3iu54txmr"]

[ext_resource type="Texture2D" uid="uid://b0t3vogr3x06f" path="res://icon.svg" id="1_fegqc"]
[ext_resource type="Script" uid="uid://odeqmb1qdv0h" path="res://ShmupSandbox/Enemies/Scripts/soul_carrier.gd" id="1_p2qxe"]
[ext_resource type="Script" uid="uid://bvted7bsjs0so" path="res://ShmupSandbox/Enemies/EnemyComponents/damage_taker_component.gd" id="2_cy2rv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2qxe"]
radius = 27.7308

[sub_resource type="SpriteFrames" id="SpriteFrames_cy2rv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fegqc")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("1_fegqc")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("1_fegqc")
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fegqc")
}],
"loop": true,
"name": &"fly",
"speed": 15.15
}]

[node name="soul_carrier" type="Node2D"]
script = ExtResource("1_p2qxe")

[node name="DamageTakerComponent" type="Area2D" parent="."]
script = ExtResource("2_cy2rv")
metadata/_custom_type_script = "uid://bvted7bsjs0so"

[node name="collider" type="CollisionShape2D" parent="DamageTakerComponent"]
shape = SubResource("CircleShape2D_p2qxe")
debug_color = Color(0.913725, 0.882353, 1, 0.270588)

[node name="sprite" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.635294)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_cy2rv")
animation = &"death"
autoplay = "fly"

[node name="onscreen_notifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(47, 0)

[node name="offscreen_notifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-40, 0)

[node name="debug_label" type="Label" parent="."]
offset_left = -67.0
offset_top = -40.0
offset_right = 115.0
offset_bottom = 9.0
text = "Enemy - Soul Carrier
"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.41
one_shot = true
explosiveness = 1.0
randomness = 0.84
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 151.08
initial_velocity_max = 287.77
scale_amount_max = 2.5

[node name="move_timer" type="Timer" parent="."]

[connection signal="health_depleted" from="DamageTakerComponent" to="." method="_on_damage_taker_component_health_depleted"]
[connection signal="screen_entered" from="onscreen_notifier" to="." method="_on_onscreen_notifier_screen_entered"]
[connection signal="screen_exited" from="offscreen_notifier" to="." method="_on_offscreen_notifier_screen_exited"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
